--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -53,7 +53,8 @@ ul md-list-item div {
 }
 
 .page-container {
-    min-height: 80%;
+    height: 100%;
+    overflow: scroll;
     margin: 0;
 }
 
@@ -71,4 +72,24 @@ ul md-list-item div {
 
 img.detail-movie {
     width: 200px;
+}
+
+.h-80px.layout-fill {
+    height: 80px;
+    min-height: 80px;
+    width: 100%;
+}
+
+footer p {
+    margin: 0;
+    text-align: center;
+}
+
+.mh-80.layout-fill {
+    height: 80%;
+    min-height: 80%;
+}
+
+md-toolbar img {
+    width: 100%;
 }
