adicionado diretiva para exibir o detalhe do filme

--- a/app/components/templates/detail-movie.html
+++ b/app/components/templates/detail-movie.html
@@ -1,5 +1,3 @@
-<h2>{{movie.name}} ({{movie.year}})</h2>
+<movie-display info="movie">
 
-<p>{{movie.premise }}</p>
-
-<img ng-src="{{ movie.image }}" class="detail-movie"/>
+</movie-display>
